# libstl

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: options.cmake
core/: CMakeLists.txt  parser.hpp  parser_option.hpp  stl_reader.cpp  stl_reader.hpp  triangle.cpp  triangle.hpp
core/utilities/: boolean_operations.hpp  box.cpp  box.hpp  geometry.hpp  string.hpp
examples/: CMakeLists.txt
examples/fox/: CMakeLists.txt  LICENSE  fox.cpp  fox_ascii.cpp
examples/lizard/: CMakeLists.txt  lizard.cpp
